// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accordion-container applies correct text size class from contentTxtSize prop: text size large 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-6-bpaj1" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-6-bpaj1-header-0">
        <button-component aria-controls="acc-6-bpaj1-collapse-0" aria-expanded="true" data-bs-target="#acc-6-bpaj1-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-6-bpaj1-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-6-bpaj1-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-down">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-6-bpaj1-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-6-bpaj1" id="acc-6-bpaj1-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: 0px;">
        <div class="accordion-body text-large">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-6-bpaj1-header-1">
        <button-component aria-controls="acc-6-bpaj1-collapse-1" aria-expanded="false" data-bs-target="#acc-6-bpaj1-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-6-bpaj1-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-6-bpaj1-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-6-bpaj1-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-6-bpaj1" id="acc-6-bpaj1-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body text-large">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container handles keyboard activation (simulate click on inner button): after activation close 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-4-ibrq7" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-4-ibrq7-header-0">
        <button-component aria-controls="acc-4-ibrq7-collapse-0" aria-expanded="false" data-bs-target="#acc-4-ibrq7-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-4-ibrq7-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-ibrq7-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-4-ibrq7-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-4-ibrq7" id="acc-4-ibrq7-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: undefinedpx;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-4-ibrq7-header-1">
        <button-component aria-controls="acc-4-ibrq7-collapse-1" aria-expanded="false" data-bs-target="#acc-4-ibrq7-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-4-ibrq7-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-ibrq7-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-4-ibrq7-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-4-ibrq7" id="acc-4-ibrq7-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container handles keyboard activation (simulate click on inner button): after activation open 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-4-ibrq7" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-4-ibrq7-header-0">
        <button-component aria-controls="acc-4-ibrq7-collapse-0" aria-expanded="true" data-bs-target="#acc-4-ibrq7-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-4-ibrq7-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-4-ibrq7-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-down">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-4-ibrq7-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-4-ibrq7" id="acc-4-ibrq7-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-4-ibrq7-header-1">
        <button-component aria-controls="acc-4-ibrq7-collapse-1" aria-expanded="false" data-bs-target="#acc-4-ibrq7-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-4-ibrq7-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-ibrq7-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-4-ibrq7-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-4-ibrq7" id="acc-4-ibrq7-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container icon switching with snapshot: after icon toggle 1`] = `
<accordion-container icon="icon-closed,icon-open">
  <div class="accordion" id="acc-5-7h8p1" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-5-7h8p1-header-0">
        <button-component aria-controls="acc-5-7h8p1-collapse-0" aria-expanded="true" data-bs-target="#acc-5-7h8p1-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-5-7h8p1-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-5-7h8p1-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-down">
                <icon-component icon="icon-open"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-5-7h8p1-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-5-7h8p1" id="acc-5-7h8p1-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-5-7h8p1-header-1">
        <button-component aria-controls="acc-5-7h8p1-collapse-1" aria-expanded="false" data-bs-target="#acc-5-7h8p1-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-5-7h8p1-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-7h8p1-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="icon-closed"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-5-7h8p1-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-5-7h8p1" id="acc-5-7h8p1-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container icon switching with snapshot: before icon toggle 1`] = `
<accordion-container icon="icon-closed,icon-open">
  <div class="accordion" id="acc-5-7h8p1" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-5-7h8p1-header-0">
        <button-component aria-controls="acc-5-7h8p1-collapse-0" aria-expanded="false" data-bs-target="#acc-5-7h8p1-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-5-7h8p1-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-7h8p1-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-up">
                <icon-component icon="icon-closed"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-5-7h8p1-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-5-7h8p1" id="acc-5-7h8p1-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-5-7h8p1-header-1">
        <button-component aria-controls="acc-5-7h8p1-collapse-1" aria-expanded="false" data-bs-target="#acc-5-7h8p1-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-5-7h8p1-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-7h8p1-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="icon-closed"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-5-7h8p1-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-5-7h8p1" id="acc-5-7h8p1-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders an item with empty header and content strings: empty header and content 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-14-bmynb" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-14-bmynb-header-0">
        <button-component aria-controls="acc-14-bmynb-collapse-0" aria-expanded="false" data-bs-target="#acc-14-bmynb-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-14-bmynb-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-14-bmynb-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-14-bmynb-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-14-bmynb" id="acc-14-bmynb-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body"></div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders correct ARIA attributes on accordion headers and panels: ARIA attributes check 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="my-accordion" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="my-accordion-header-0">
        <button-component aria-controls="my-accordion-collapse-0" aria-expanded="false" data-bs-target="#my-accordion-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="my-accordion-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#my-accordion-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Item 1
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="my-accordion-header-0" class="accordion-collapse collapse" data-bs-parent="#my-accordion" id="my-accordion-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders empty accordion when data is an empty array: empty array data 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-11-3uz30" role="presentation"></div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: empty string icon 1`] = `
<accordion-container icon="">
  <div class="accordion" id="acc-15-dhpns" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-dhpns-header-0">
        <button-component aria-controls="acc-15-dhpns-collapse-0" aria-expanded="false" data-bs-target="#acc-15-dhpns-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-15-dhpns-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-dhpns-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              H
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-15-dhpns-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-15-dhpns" id="acc-15-dhpns-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          C
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: malformed icon string 1`] = `
<accordion-container icon="  , , ,">
  <div class="accordion" id="acc-17-a4kxu" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-17-a4kxu-header-0">
        <button-component aria-controls="acc-17-a4kxu-collapse-0" aria-expanded="false" data-bs-target="#acc-17-a4kxu-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-17-a4kxu-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-17-a4kxu-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              H
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-17-a4kxu-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-17-a4kxu" id="acc-17-a4kxu-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          C
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: null icon 1`] = `
<accordion-container>
  <div class="accordion" id="acc-16-8il63" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-16-8il63-header-0">
        <button-component aria-controls="acc-16-8il63-collapse-0" aria-expanded="false" data-bs-target="#acc-16-8il63-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-16-8il63-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-16-8il63-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              H
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-16-8il63-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-16-8il63" id="acc-16-8il63-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          C
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: non-array data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-10-od951" role="presentation"></div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: null data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-9-ax2xh" role="presentation"></div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: undefined data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-8-zhaz3" role="presentation"></div>
</accordion-container>
`;

exports[`accordion-container renders many accordion items and matches snapshot: long data array (12 items) 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-13-i3xks" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-0">
        <button-component aria-controls="acc-13-i3xks-collapse-0" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-1">
        <button-component aria-controls="acc-13-i3xks-collapse-1" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-2">
        <button-component aria-controls="acc-13-i3xks-collapse-2" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-2" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-2" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-2" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 3
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-2" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-2" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 3
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-3">
        <button-component aria-controls="acc-13-i3xks-collapse-3" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-3" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-3" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-3" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 4
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-3" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-3" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 4
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-4">
        <button-component aria-controls="acc-13-i3xks-collapse-4" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-4" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-4" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-4" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 5
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-4" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-4" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 5
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-5">
        <button-component aria-controls="acc-13-i3xks-collapse-5" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-5" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-5" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-5" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 6
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-5" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-5" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 6
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-6">
        <button-component aria-controls="acc-13-i3xks-collapse-6" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-6" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-6" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-6" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 7
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-6" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-6" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 7
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-7">
        <button-component aria-controls="acc-13-i3xks-collapse-7" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-7" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-7" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-7" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 8
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-7" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-7" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 8
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-8">
        <button-component aria-controls="acc-13-i3xks-collapse-8" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-8" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-8" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-8" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 9
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-8" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-8" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 9
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-9">
        <button-component aria-controls="acc-13-i3xks-collapse-9" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-9" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-9" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-9" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 10
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-9" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-9" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 10
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-10">
        <button-component aria-controls="acc-13-i3xks-collapse-10" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-10" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-10" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-10" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 11
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-10" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-10" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 11
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-13-i3xks-header-11">
        <button-component aria-controls="acc-13-i3xks-collapse-11" aria-expanded="false" data-bs-target="#acc-13-i3xks-collapse-11" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-13-i3xks-collapse-11" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-13-i3xks-collapse-11" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 12
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-13-i3xks-header-11" class="accordion-collapse collapse" data-bs-parent="#acc-13-i3xks" id="acc-13-i3xks-collapse-11" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 12
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders no icon-component if icon is "," or whitespace only: no icon rendered: icon as comma only 1`] = `
<accordion-container icon=",">
  <div class="accordion" id="acc-19-ou5ki" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-19-ou5ki-header-0">
        <button-component aria-controls="acc-19-ou5ki-collapse-0" aria-expanded="false" data-bs-target="#acc-19-ou5ki-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-19-ou5ki-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-19-ou5ki-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              A
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-19-ou5ki-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-19-ou5ki" id="acc-19-ou5ki-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          B
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders no icon-component if icon is "," or whitespace only: no icon rendered: icon as space only 1`] = `
<accordion-container icon=" ">
  <div class="accordion" id="acc-20-2691o" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-20-2691o-header-0">
        <button-component aria-controls="acc-20-2691o-collapse-0" aria-expanded="false" data-bs-target="#acc-20-2691o-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-20-2691o-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-20-2691o-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              A
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-20-2691o-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-20-2691o" id="acc-20-2691o-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          B
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders only first two icons from icon="a,b,c": icon prop with extra values (a,b,c) 1`] = `
<accordion-container icon="a,b,c">
  <div class="accordion" id="acc-21-vlgli" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-21-vlgli-header-0">
        <button-component aria-controls="acc-21-vlgli-collapse-0" aria-expanded="false" data-bs-target="#acc-21-vlgli-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-21-vlgli-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-21-vlgli-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              H
              <span class="rotate-up">
                <icon-component icon="a"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-21-vlgli-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-21-vlgli" id="acc-21-vlgli-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: undefinedpx;">
        <div class="accordion-body">
          C
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders outlined, block, and disabled props: outlined-block-disabled 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-2-qurp3" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-2-qurp3-header-0">
        <button-component aria-controls="acc-2-qurp3-collapse-0" aria-expanded="false" data-bs-target="#acc-2-qurp3-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-2-qurp3-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn btn--block btn-outline- collapsed" data-bs-target="#acc-2-qurp3-collapse-0" data-bs-toggle="collapse" disabled="" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-2-qurp3-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-2-qurp3" id="acc-2-qurp3-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-2-qurp3-header-1">
        <button-component aria-controls="acc-2-qurp3-collapse-1" aria-expanded="false" data-bs-target="#acc-2-qurp3-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-2-qurp3-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn btn--block btn-outline- collapsed" data-bs-target="#acc-2-qurp3-collapse-1" data-bs-toggle="collapse" disabled="" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-2-qurp3-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-2-qurp3" id="acc-2-qurp3-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders single static icon and does not change on toggle: static single icon toggle does not change 1`] = `
<accordion-container icon="only-icon">
  <div class="accordion" id="acc-22-mg62e" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-22-mg62e-header-0">
        <button-component aria-controls="acc-22-mg62e-collapse-0" aria-expanded="false" data-bs-target="#acc-22-mg62e-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-22-mg62e-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-22-mg62e-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Static
              <span class="rotate-up">
                <icon-component icon="only-icon"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-22-mg62e-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-22-mg62e" id="acc-22-mg62e-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: undefinedpx;">
        <div class="accordion-body">
          Content
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders static icon with no toggle switch: static icon no switch 1`] = `
<accordion-container icon="icon-static">
  <div class="accordion" id="acc-7-vypbi" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-7-vypbi-header-0">
        <button-component aria-controls="acc-7-vypbi-collapse-0" aria-expanded="false" data-bs-target="#acc-7-vypbi-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-7-vypbi-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-7-vypbi-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-up">
                <icon-component icon="icon-static"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-7-vypbi-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-7-vypbi" id="acc-7-vypbi-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-7-vypbi-header-1">
        <button-component aria-controls="acc-7-vypbi-collapse-1" aria-expanded="false" data-bs-target="#acc-7-vypbi-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-7-vypbi-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-7-vypbi-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="icon-static"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-7-vypbi-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-7-vypbi" id="acc-7-vypbi-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders with given data and matches snapshot 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-1-lnoo6" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-1-lnoo6-header-0">
        <button-component aria-controls="acc-1-lnoo6-collapse-0" aria-expanded="false" data-bs-target="#acc-1-lnoo6-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-1-lnoo6-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-1-lnoo6-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-1-lnoo6-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-1-lnoo6" id="acc-1-lnoo6-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-1-lnoo6-header-1">
        <button-component aria-controls="acc-1-lnoo6-collapse-1" aria-expanded="false" data-bs-target="#acc-1-lnoo6-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-1-lnoo6-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-1-lnoo6-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-1-lnoo6-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-1-lnoo6" id="acc-1-lnoo6-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container toggles accordion via click and matches snapshot: click toggle first open 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-3-nlb0h" role="presentation">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-3-nlb0h-header-0">
        <button-component aria-controls="acc-3-nlb0h-collapse-0" aria-expanded="true" data-bs-target="#acc-3-nlb0h-collapse-0" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-3-nlb0h-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-3-nlb0h-collapse-0" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 1
              <span class="rotate-down">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-3-nlb0h-header-0" class="accordion-collapse collapse" data-bs-parent="#acc-3-nlb0h" id="acc-3-nlb0h-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-3-nlb0h-header-1">
        <button-component aria-controls="acc-3-nlb0h-collapse-1" aria-expanded="false" data-bs-target="#acc-3-nlb0h-collapse-1" data-bs-toggle="collapse" slot-side="none">
          <!---->
          <button aria-controls="acc-3-nlb0h-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-3-nlb0h-collapse-1" data-bs-toggle="collapse" role="button" type="button">
            <span class="btn__content">
              Header 2
              <span class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-3-nlb0h-header-1" class="accordion-collapse collapse" data-bs-parent="#acc-3-nlb0h" id="acc-3-nlb0h-collapse-1" role="region" style="overflow: hidden; transition: height 0.35s ease;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;
